Feature: ClearAll and Clear Commands